# viscous_film_CUDA

./: .gitignore  CMakeLists.txt  README.md  brick.txt  brick_fines.txt  brick_gaussian.txt  e_T_0.5.txt  hello.cu  kernel.h  plot.py  project.c  project.cu  roof_plot.py  shaders.c  shaders.h  video.py  viscous.c  viscous.cu  viscous.h  window.c
inc/: gl_utils.h  kernel.h  shaders.h  viscous.h  window.h
src/: gl_utils.cpp  kernel.cu  project.cu  shaders.c  viscous.c  window.c
